# dhn_stream

./: .gitignore  README.md  conftest.py  darkhorse_stream.code-workspace  manifest.yaml  pyproject.toml
configs/: synthetic_udp_16ch.yaml
docs/: api-smoke-tests.md  index.md  nrd-format.md  smoke_tests.yaml
scripts/: install_dev.sh
src/darkhorse_neuralynx/: cli.py  cli_helpers.py
src/darkhorse_neuralynx/config/: models.py
src/darkhorse_neuralynx/dashboard/: __init__.py  app.py  labels.py  monitor.py  server.py
src/darkhorse_neuralynx/udp_raw/: harmonic_sender.py  nrd_file.py  nrd_sender.py  nrd_stats.py  probe.py  probe_receiver.py  raw_sender.py  synthetic_sender.py
src/darkhorse_neuralynx/verify/: med_verify.py
static/dashboard/: app.js
tests/: test_api_smoke.py  test_config.py  test_dashboard.py  test_nrd_packet.py  test_nrd_stats.py  test_scaling.py  test_serialization.py
webapp/: db.sqlite3  manage.py
webapp/dashboard/: api.py  consumers.py  routing.py  si_sender.py  sine_sender.py  spectrum_decoder.py  state.py  urls.py  views.py
webapp/dashboard/templates/dashboard/: index.html
webapp/dhn_web/: asgi.py  settings.py  urls.py
