[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhn_client"
version = "0.1.0"
description = "Synthetic UDP acquisition pipeline for DHN-AQ with MED verification"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pydantic>=2.0",
    "pydantic-settings",
    "typer",
    "rich",
    "spikeinterface",
    "dhn-med-py",
    "pyyaml",
    "django>=4.2",
    "channels>=4.0",
    "daphne>=4.0",
    "psutil>=5.9",
]

[project.scripts]
dhn-sine-udp  = "darkhorse_neuralynx.udp_raw.harmonic_sender:app"
dhn-si-udp    = "darkhorse_neuralynx.udp_raw.synthetic_sender:app"
dhn-udp-probe = "darkhorse_neuralynx.udp_raw.probe_receiver:app"
dhn-verify-med = "darkhorse_neuralynx.verify.med_verify:app"

[tool.hatch.build.targets.wheel]
packages = ["src/darkhorse_neuralynx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "dhn_web.settings"
pythonpath = ["webapp", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
