[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhn_client"
version = "0.1.0"
description = "Neuralynx NRD UDP streamer for DHN_Acq + MED verification"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "typer",
    "rich",
]

[project.optional-dependencies]
spike  = ["spikeinterface", "scipy"]
verify = ["dhn-med-py"]
dashboard = ["fastapi", "uvicorn", "openpyxl"]
dev    = ["pytest", "ruff", "mypy"]

[project.scripts]
dhn-stream     = "darkhorse_neuralynx.cli:app"
dhn-probe      = "darkhorse_neuralynx.udp_raw.probe:app"
dhn-verify-med = "darkhorse_neuralynx.verify.med_verify:app"

[tool.hatch.build.targets.wheel]
packages = ["src/darkhorse_neuralynx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
